# claude-gateway

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  scratch_test.py  sitemap.xml
.github/workflows/: deploy-docs.yml
architecture/: index.html
caching/: index.html
claude_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dashboard/: index.html
docker/: index.html
docs/: architecture.md  caching.md  dashboard.md  docker.md  index.md  scaling.md  setup.md
gateway/: config.py
gateway/api/: routes.py  server.py
gateway/cache/: exact.py  invalidation.py  semantic.py
gateway/embeddings/: openai.py
gateway/git/: context.py  repository.py  watcher.py
gateway/metrics/: prometheus.py
gateway/providers/: anthropic.py
gateway/storage/: qdrant.py  redis.py  sqlite.py
gateway/templates/: dashboard.html
scaling/: index.html
search/: search_index.json
setup/: index.html
