[project]
name = "claude-gateway"
version = "1.0.0"
description = "High-performance repository-aware proxy cache daemon for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "httpx>=0.24.0",
    "psutil>=5.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.0.0",
    "prometheus-client>=0.17.0",
    "redis>=4.5.0",
    "qdrant-client>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pre-commit>=3.0.0",
    "ruff>=0.1.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["gateway"]
